project(chat)
set(CMAKE_C_FLAGS "-std=c99")
add_subdirectory(facio)
set(CMAKE_BUILD_TYPE "Debug")
SET(SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/vendor/)
#FILE(GLOB files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.c" "vendor/json/*.c")
FILE(GLOB files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.c" "app/*.c" "vendor/json/*.c")
#file(GLOB_RECURSE files FOLLOW_SYMLINKS app/*.c vendor/*.c ./*.c)
MESSAGE(STATUS "当前的文件列表是=" ${files})
MESSAGE(STATUS "SOURCE_PATH=" ${SOURCE_PATH})
#MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR=" ${CMAKE_CURRENT_SOURCE_DIR})
#add_executable(chat start.c)
INCLUDE_DIRECTORIES(/usr/include/mysql)
add_executable(chat ${files})
FIND_LIBRARY(LIBMYSQLCLIENT mysqlclient /usr/lib64/mysql)
target_link_libraries(chat facil.io)
target_link_libraries(chat PUBLIC curl)
target_link_libraries(chat ${LIBMYSQLCLIENT})